--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   animate_do: ^2.0.0
   intl: ^0.17.0
   
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,6 +44,7 @@ dependencies:
   google_fonts:
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.4
+  cloud_firestore: ^4.6.0
 
 
 dev_dependencies:
